--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
            <div style="max-width: 70%;">
           </div>
          <div>
-        <img src="qr.png" alt="QR Code" style="max-width: 150px; height: auto;">
+        <img src="qr.PNG" style="max-width: 150px; height: auto;">
        </div>
       </div>
 
@@ -215,7 +215,7 @@
            <div style="max-width: 70%;">
           </div>
          <div>
-        <img src="qr.png" alt="QR Code" style="max-width: 150px; height: auto;">
+        <img src="qr.PNG" style="max-width: 150px; height: auto;">
        </div>
       </div>
 
@@ -290,7 +290,7 @@
            <div style="max-width: 70%;">
           </div>
          <div>
-        <img src="qr.png" alt="QR Code" style="max-width: 150px; height: auto;">
+        <img src="qr.PNG" style="max-width: 150px; height: auto;">
        </div>
       </div>
 
@@ -347,7 +347,6 @@
     </ul>
     <h3>KO‘CHMA VA PREMIUM XIZMATLAR</h3>
     <ul>
-        <li>Sayyor notarius</li>
         <li>Ishdan keyingi va dam olish kunlari uchrashuvlar</li>
         <li>Bir kunlik kur’er, yetkazib berish, olish</li>
         <li>Saytda pasport fotosuratlari</li>
