--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <!-- Main Content -->
     <main>
         <!-- Hero Section -->
-        <section style="background-image: url('uscongress.jpg');" class="hero-section text-white">
+        <section style="background-image: url('bg.jpg');" class="hero-section text-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-24 md:py-32 text-center">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4" data-translate-key="hero_title">Your Trusted Partner for Every Need</h1>
                 <p class="text-lg md:text-xl text-gray-200 max-w-3xl mx-auto" data-translate-key="hero_subtitle">Comprehensive support for vehicle, legal, immigration, and business services. We speak your language.</p>
