--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TAG PRO</title>
+    <title>Tag Pro Agency LLC</title>
     
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -94,7 +94,7 @@
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
-                    <a href="#" class="text-xl font-bold text-[var(--primary-dark)]" data-translate-key="brand_name">TAG PRO</a>
+                    <a href="#" class="text-xl font-bold text-[var(--primary-dark)]" data-translate-key="brand_name">Tag Pro Agency LLC</a>
                 </div>
                 <div class="flex items-center space-x-1">
                     <!-- Language Switcher -->
@@ -268,8 +268,8 @@
         // --- TRANSLATIONS DATA ---
         const translations = {
             en: {
-                gov_banner: "An official website of the TAG PRO",
-                brand_name: "TAG PRO",
+                gov_banner: "An official website of the Tag Pro Agency LLC",
+                brand_name: "Tag Pro Agency LLC",
                 hero_title: "Your Trusted Partner for Every Need",
                 hero_subtitle: "Comprehensive support for vehicle, legal, immigration, and business services. We speak your language.",
                 services_title: "Our Services",
@@ -299,8 +299,8 @@
                 s8_list: ["Mobile notary & registration services", "Same-day courier/document delivery & pickup", "Evening & weekend appointments by request", "Emergency travel, court & legal support",],
             },
             ru: {
-                gov_banner: "Официальный сайт TAG PRO",
-                brand_name: "TAG PRO",
+                gov_banner: "Официальный сайт Tag Pro Agency LLC",
+                brand_name: "Tag Pro Agency LLC",
                 hero_title: "Ваш надежный партнер на все случаи жизни",
                 hero_subtitle: "Комплексная поддержка по автомобильным, юридическим, иммиграционным и бизнес-услугам. Мы говорим на вашем языке.",
                 services_title: "Наши Услуги",
@@ -330,8 +330,8 @@
                 s8_list: ["Выездной нотариус и регистрация", "Курьерская доставка и сбор документов в тот же день", "Вечерние и выходные встречи по запросу", "Экстренная поддержка по вопросам права, поездок и суда",],
             },
             uz: {
-                gov_banner: "TAG PRO rasmiy veb-sayti",
-                brand_name: "TAG PRO",
+                gov_banner: "Tag Pro Agency LLC rasmiy veb-sayti",
+                brand_name: "Tag Pro Agency LLC",
                 hero_title: "Har bir ehtiyojingiz uchun ishonchli hamkoringiz",
                 hero_subtitle: "Avtomobil, huquqiy, immigratsiya va biznes xizmatlari bo'yicha keng qamrovli yordam. Biz sizning tilingizda gaplashamiz.",
                 services_title: "Bizning Xizmatlarimiz",
