--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 s1_title: "Vehicle & Registration Services",
                 s1_list: ["Title transfers for private and dealer vehicle sales", "New Pennsylvania license plates and validation stickers", "IRP (International Registration Plan) registration for commercial trucks", "Duplicate titles and registration cards", "Temporary tags and registration renewals", "Dealer and commercial vehicle processing", "EZ Pass setup and toll payments", "Violation management: citation support", "Suspended registration resolution", "Court fine payments and negotiation assistance",],
                 s2_title: "Notary & Legal Document Services",
-                s2_list: ["Notarization of all personal and legal documents", "Customized Power of Attorney", "Apostille services for international use", "Affidavits for court & legal requirements", "Divorce & property separation assistance", "Living Will & Trust notarization", "Sponsorship & employment verification letters", "Lease agreement notarization", "Mobile notary visits (home/office/hospital)",],
+                s2_list: ["Notarization of all personal and legal documents", "Customized Power of Attorney", "Apostille services for international use", "Affidavits for court & legal requirements", "Marriage & Divorce Application Assistance", "Living Will & Trust notarization", "Sponsorship & employment verification letters", "Lease agreement notarization", "Mobile notary visits (home/office/hospital)",],
                 s3_title: "Translation & Certified Document Handling",
                 s3_list: ["Certified translations (English/Russian/Uzbek)", "Multilingual legal and immigration documentation", "Certified mail, envelope prep, and delivery", "Court interpreter and in-person translation support",],
                 s4_title: "Immigration & Government Form Assistance",
@@ -303,7 +303,7 @@
                 s4_title: "Иммиграция и государственные услуги",
                 s4_list: ["Продление грин-карты", "Продление EAD (разрешения на работу)", "Заявки на гражданство США", "Устранение ошибок/дубликаты свидетельства о рождении", "Помощь с паспортами (обычные, ускоренные, срочные)", "Получение виз и сертификатов на возвращение Узбекистана", "Поддержка ELRC (детские субсидии)", "Оформление медстраховки (Marketplace, Medicaid, CHIP)", "SNAP", "Регистрация в школу/детский сад", "Эвалюация дипломов/транскриптов", "Заявки на Social Security",],
                 s5_title: "Бизнес и финансы",
-                s5_list: ["Открытие бизнеса (ООО, корпорация, ИП)", "Настройка и ведение payroll", "Поддержка по компенсациям", "Страхование бизнеса", "Настройка и обучение QuickBooks", "Ответы на письма/штрафы от налоговой", "Помощь в оплате налогов IRS и рассрочки", "New York Life: консультации и рекомендации по страхованию жизни",],
+                s5_list: ["Открытие бизнеса (LLC, Corporation, Sole Proprietor)", "Настройка и ведение payroll", "Поддержка по компенсациям", "Страхование бизнеса", "Настройка и обучение QuickBooks", "Ответы на письма/штрафы от налоговой", "Помощь в оплате налогов IRS и рассрочки", "New York Life: консультации и рекомендации по страхованию жизни",],
                 s6_title: "Поддержка в суде",
                 s6_list: ["Прозвон в магистратский суд: подача заявления о виновности/невиновности", "Сопровождение в суд – перевод и представительство", "Работа с билетами, начислениями, слушаниями", "Переговоры по штрафам и перевод документации",],
                 s7_title: "Приглашения и мероприятия",
