--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="flex items-center justify-between h-16">
                 <div class="flex-shrink-0">
                     <a href="#">
-                        <img src="logo.png" alt="Tag Pro Agency LLC Logo" class="h-14 w-auto">
+                        <img src="logo.png" alt="Tag Pro Agency LLC Logo" width="200" height="300">
                     </a>
                 </div>
                 <div class="flex items-center space-x-1">
