--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
         }
 
         /* Hero section with background image */
-        .hero-section {
+	.hero-section {
             background-image: linear-gradient(rgba(17, 46, 81, 0.8), rgba(17, 46, 81, 0.8)), url('bg.jpg');
-            background-size: cover;
-            background-position: center;
-        }
+   	    background-size: cover;
+    	    background-position: center;
+    	    background-attachment: fixed;
+    	    background-repeat: no-repeat;
+ 	}
+
 
         /* Animation for sections fading in on scroll */
         .fade-in-section {
@@ -112,7 +115,13 @@
             </div>
         </section>
 
-        <section id="services" class="py-16 sm:py-24" style="background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('bgrd.jpg'); background-size: cover; background-position: center;">
+        <section id="services" class="py-16 sm:py-24" style="
+    background-image: linear-gradient(rgba(17, 17, 17, 0.6), rgba(17, 17, 17, 0.6)), url('bgrd.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl md:text-4xl font-bold text-white" data-translate-key="services_title">Our Services</h2>
