--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             background-color: #e1f3f8;
             color: var(--primary-medium);
         }
+
+	@media (max-width: 768px) {
+ 	 #services {
+ 	   background-attachment: scroll !important;
+ 	   background-position: center top;
+  	   background-size: cover;
+  	   background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9)), url('bgrd.jpg');
+ 	 }
+	}
     </style>
 </head>
 <body class="text-gray-800">
