--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
   	   background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9)), url('bgrd.jpg');
  	 }
 	}
+	
+
     </style>
 </head>
 <body class="text-gray-800">
@@ -255,8 +257,10 @@
             <h3 class="text-2xl font-semibold mb-6" data-translate-key="footer_contact_title">Contact Information</h3>
             <div class="space-y-4 text-gray-300">
                 <p class="flex items-center justify-center"><span class="mr-2 text-xl"><img src="address.png" width="20" height="30"></span> 40 Bellevue Ave, Penndel, PA 19047</p>
+		<p class="flex items-center justify-center"><span class="mr-2 text-xl"><img src="email.png" width="20" height="30"></span> <a href="mailto:tagproagency@gmail.com" class="hover:underline text-white">tagproagency@gmail.com</a></p>
                 <p class="flex items-center justify-center"><span class="mr-2 text-xl"><img src="phone.png" width="20" height="30"></span> <a href="tel:2672176500" class="hover:underline text-white">267-217-6500</a></p>
                 <p class="flex items-center justify-center"><span class="mr-2 text-xl"><img src="telegram.png" width="20" height="30"></span> <a href="https://t.me/notary_fm7" target="_blank" class="hover:underline text-white">@notary_fm7</a></p>
+
             </div>
             <div class="mt-8 pt-8 border-t border-gray-700">
                 <p class="text-sm text-gray-400" data-translate-key="footer_copyright">&copy; 2025 Tag Pro Agency LLC | Designed with care</p>
