--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 s4_title: "Иммиграция и государственные услуги",
                 s4_list: ["Продление грин-карты", "Продление EAD (разрешения на работу)", "Заявки на гражданство США", "Устранение ошибок/дубликаты свидетельства о рождении", "Помощь с паспортами (обычные, ускоренные, срочные)", "Получение виз и сертификатов на возвращение Узбекистана", "Поддержка ELRC (детские субсидии)", "Оформление медстраховки (Marketplace, Medicaid, CHIP)", "SNAP", "Регистрация в школу/детский сад", "Эвалюация дипломов/транскриптов", "Заявки на Social Security",],
                 s5_title: "Бизнес и финансы",
-                s5_list: ["Открытие бизнеса (ООО, корпорация, ИП)", "Настройка и ведение payroll", "Поддержка по компенсациям", "Страхование бизнеса", "Настройка и обучение QuickBooks", "Ответы на письма/штрафы от налоговой", "Помощь в оплате налогов IRS и рассрочки", "New York Life: консультации и рекомендации по страхованию жизни",],
+                s5_list: ["Открытие бизнеса (LLC, Corporation, Sole Proprietor)", "Настройка и ведение payroll", "Поддержка по компенсациям", "Страхование бизнеса", "Настройка и обучение QuickBooks", "Ответы на письма/штрафы от налоговой", "Помощь в оплате налогов IRS и рассрочки", "New York Life: консультации и рекомендации по страхованию жизни",],
                 s6_title: "Поддержка в суде",
                 s6_list: ["Прозвон в магистратский суд: подача заявления о виновности/невиновности", "Сопровождение в суд – перевод и представительство", "Работа с билетами, начислениями, слушаниями", "Переговоры по штрафам и перевод документации",],
                 s7_title: "Приглашения и мероприятия",
