--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
             </div>
             <div class="mt-8 pt-8 border-t border-gray-700">
                 <p class="text-sm text-gray-400" data-translate-key="footer_copyright">&copy; 2025 Tag Pro Agency LLC | Designed with care</p>
+		<p class="text-xs text-gray-500 mt-4 max-w-3xl mx-auto" data-translate-key="privacy_policy"></p>
             </div>
         </div>
     </footer>
@@ -283,6 +284,7 @@
                 contact_subtitle: "Scan the code below with your phone to get in touch with us instantly.",
                 footer_contact_title: "Contact Information",
                 footer_copyright: "© 2025 Tag Pro Agency LLC | Designed with care",
+		privacy_policy : "Privacy Policy: No mobile information will be shared with third parties/affiliates for marketing/promotional purposes. All other categories exclude text messaging originator opt-in data and consent; this information will not be shared with any third parties.",
                 s1_title: "Vehicle & Registration Services",
                 s1_list: ["Title transfers for private and dealer vehicle sales", "New Pennsylvania license plates and validation stickers", "IRP (International Registration Plan) registration for commercial trucks", "Duplicate titles and registration cards", "Temporary tags and registration renewals", "Dealer and commercial vehicle processing", "EZ Pass setup and toll payments", "Violation management: citation support", "Suspended registration resolution", "Court fine payments and negotiation assistance",],
                 s2_title: "Notary & Legal Document Services",
@@ -299,7 +301,7 @@
                 s7_list: ["Custom invitations: weddings, birthdays, baby showers, special events", "Personalized RSVP link creation", "Fast turnaround & digital/mobile delivery",],
                 s8_title: "Mobile & After-Hours Services",
                 s8_list: ["Mobile notary & registration services", "Same-day courier/document delivery & pickup", "Evening & weekend appointments by request", "Emergency travel, court & legal support",],
-            },
+	    },
             ru: {
                 gov_banner: "Официальный сайт Tag Pro Agency LLC",
                 hero_title: "Ваш надежный партнер на все случаи жизни",
@@ -310,6 +312,7 @@
                 contact_subtitle: "Отсканируйте QR-код телефоном, чтобы связаться с нами.",
                 footer_contact_title: "Контактная информация",
                 footer_copyright: "© 2025 Tag Pro Agency LLC | Разработано с заботой",
+		privacy_policy : "Политика конфиденциальности: Мобильная информация не будет передаваться третьим лицам/аффилированным лицам в маркетинговых/рекламных целях. Все остальные категории исключают данные и согласие на подписку на текстовые сообщения; эта информация не будет передаваться третьим лицам.",
                 s1_title: "Автоуслуги",
                 s1_list: ["Передача TITLE при купле/продаже автомобиля", "Новые номерные знаки и стикеры Пенсильвании", "IRP-регистрация грузовиков", "Дубликаты TITLE и регистрационных карт", "Временные номера и продление регистрации", "Обработка дилерских и коммерческих автомобилей", "Подключение EZ Pass и оплата сборов", "Работа с нарушениями и штрафами", "Решение приостановленной регистрации", "Оплата штрафов и переговоры с судом",],
                 s2_title: "Нотариальные и юридические услуги",
@@ -337,6 +340,7 @@
                 contact_subtitle: "Biz bilan tezda bog'lanish uchun quyidagi QR kodni telefoningiz bilan skanerlang.",
                 footer_contact_title: "Bog'lanish uchun ma'lumot",
                 footer_copyright: "© 2025 Tag Pro Agency LLC | G'amxo'rlik bilan ishlab chiqilgan",
+		privacy_policy : "Maxfiylik siyosati: Mobil ma'lumotlar marketing/reklama maqsadlarida uchinchi shaxslarga/filiallarga taqdim etilmaydi. Boshqa barcha toifalar matnli xabarlarga obuna bo'lish ma'lumotlari va roziligini o'z ichiga olmaydi; bu ma'lumotlar hech qanday uchinchi shaxslarga beril",
                 s1_title: "Avtomobil Xizmatlari",
                 s1_list: ["Avtomobil TITLE’sini sotib olish/sotishda o‘tkazish", "Pennsylvania shtati raqam belgisi va stikerlari", "IRP ro‘yxatdan o‘tkazish (yuk mashinalari)", "TITLE va ro‘yxat kartasi dublikatlari", "Vaqtinchalik raqamlar va ro‘yxatdan o‘tish davomiyligi", "Diler va tijorat transport rasmiylashtiruvi", "EZ Pass o‘rnatish va yo‘l to‘lovlari", "Qoidabuzarliklar bilan ishlash", "Ro‘yxatning to‘xtatilishi masalalarini hal qilish", "Sudga to‘lovlar va jarimalarni to‘lash",],
                 s2_title: "Notarius va Huquqiy Hujjat Xizmatlari",
