--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 contact_subtitle: "Biz bilan tezda bog'lanish uchun quyidagi QR kodni telefoningiz bilan skanerlang.",
                 footer_contact_title: "Bog'lanish uchun ma'lumot",
                 footer_copyright: "© 2025 Tag Pro Agency LLC | G'amxo'rlik bilan ishlab chiqilgan",
-		privacy_policy : "Maxfiylik siyosati: Mobil ma'lumotlar marketing/reklama maqsadlarida uchinchi shaxslarga/filiallarga taqdim etilmaydi. Boshqa barcha toifalar matnli xabarlarga obuna bo'lish ma'lumotlari va roziligini o'z ichiga olmaydi; bu ma'lumotlar hech qanday uchinchi shaxslarga beril",
+		privacy_policy : "Maxfiylik siyosati: Mobil ma'lumotlar marketing/reklama maqsadlarida uchinchi shaxslarga/filiallarga taqdim etilmaydi. Boshqa barcha toifalar matnli xabarlarga obuna bo'lish ma'lumotlari va roziligini o'z ichiga olmaydi; bu ma'lumotlar hech qanday uchinchi shaxslarga berilmaydi.",
                 s1_title: "Avtomobil Xizmatlari",
                 s1_list: ["Avtomobil TITLE’sini sotib olish/sotishda o‘tkazish", "Pennsylvania shtati raqam belgisi va stikerlari", "IRP ro‘yxatdan o‘tkazish (yuk mashinalari)", "TITLE va ro‘yxat kartasi dublikatlari", "Vaqtinchalik raqamlar va ro‘yxatdan o‘tish davomiyligi", "Diler va tijorat transport rasmiylashtiruvi", "EZ Pass o‘rnatish va yo‘l to‘lovlari", "Qoidabuzarliklar bilan ishlash", "Ro‘yxatning to‘xtatilishi masalalarini hal qilish", "Sudga to‘lovlar va jarimalarni to‘lash",],
                 s2_title: "Notarius va Huquqiy Hujjat Xizmatlari",
