--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
                     >
                         UZ
                     </button>
+                    <button
+                        class="lang-btn px-2.5 py-1 text-xs font-medium text-gray-700 rounded-full"
+                        data-lang="tj"
+                    >
+                        TJ
+                    </button>
                 </div>
                 <a
                     href="tel:2672176500"
@@ -1101,8 +1107,8 @@
                     "Comprehensive support for vehicle, legal, immigration, and business services. We speak your language.",
                 hero_cta_primary: "Call 267-217-6500",
                 hero_cta_secondary: "Message us on Telegram",
-                hero_stat_1_title: "3 Languages",
-                hero_stat_1_desc: "English, Russian, Uzbek",
+                hero_stat_1_title: "4 Languages",
+                hero_stat_1_desc: "English, Russian, Uzbek, Tajik",
                 hero_stat_2_title: "Full-service",
                 hero_stat_2_desc: "Vehicle, forms, court, more",
                 hero_stat_3_title: "Personal help",
@@ -1122,7 +1128,7 @@
                     "Tag Pro Agency LLC helps immigrants, families, and business owners handle the paperwork that actually affects their life: titles, registrations, court forms, immigration, insurance, and more.",
                 about_points: [
                     "In-person, phone, and mobile service",
-                    "We speak English, Russian, and Uzbek",
+                    "We speak English, Russian, Uzbek, and Tajik",
                     "We focus on explaining in simple language",
                     "We help you avoid mistakes and delays",
                 ],
@@ -1265,8 +1271,8 @@
                     "Комплексная поддержка по автомобильным, юридическим, иммиграционным и бизнес-услугам. Мы говорим на вашем языке.",
                 hero_cta_primary: "Позвонить 267-217-6500",
                 hero_cta_secondary: "Написать в Telegram",
-                hero_stat_1_title: "3 языка",
-                hero_stat_1_desc: "Английский, русский, узбекский",
+                hero_stat_1_title: "4 языка",
+                hero_stat_1_desc: "Английский, русский, узбекский, таджикский",
                 hero_stat_2_title: "Полный спектр",
                 hero_stat_2_desc: "Авто, формы, суд и др.",
                 hero_stat_3_title: "Личное сопровождение",
@@ -1286,7 +1292,7 @@
                     "Tag Pro Agency LLC помогает иммигрантам, семьям и владельцам бизнеса разбираться с документами: тайтлы, регистрации, суд, иммиграция, страховка и другое.",
                 about_points: [
                     "Приём в офисе, по телефону и выезд на место",
-                    "Говорим на английском, русском и узбекском",
+                    "Говорим на английском, русском, узбекском и таджикском",
                     "Объясняем простым языком без сложных терминов",
                     "Помогаем избежать ошибок, штрафов и задержек",
                 ],
@@ -1429,8 +1435,8 @@
                     "Avtomobil, huquqiy, immigratsiya va biznes xizmatlari bo‘yicha keng qamrovli yordam. Biz sizning tilingizda gaplashamiz.",
                 hero_cta_primary: "267-217-6500 raqamiga qo'ng'iroq qiling",
                 hero_cta_secondary: "Telegram orqali yozing",
-                hero_stat_1_title: "3 til",
-                hero_stat_1_desc: "Ingliz, rus, o‘zbek",
+                hero_stat_1_title: "4 til",
+                hero_stat_1_desc: "Ingliz, rus, o‘zbek, tojik",
                 hero_stat_2_title: "To‘liq xizmat",
                 hero_stat_2_desc: "Avto, hujjatlar, sud va boshqalar",
                 hero_stat_3_title: "Shaxsiy yordam",
@@ -1451,7 +1457,7 @@
                     "Tag Pro Agency LLC immigrantlar, oilalar va biznes egalari uchun hayotga ta'sir qiladigan hujjatlar bilan ishlashga yordam beradi: title, ro‘yxat, sud, immigratsiya, sug‘urta va boshqalar.",
                 about_points: [
                     "Ofisda qabul, telefon va chiqib xizmat ko‘rsatish",
-                    "Ingliz, rus va o‘zbek tillarida gaplashamiz",
+                    "Ingliz, rus, o‘zbek va tojik tillarida gaplashamiz",
                     "Murakkab so‘zlarsiz, oddiy tilda tushuntiramiz",
                     "Xatoliklar, jarimalar va kechikishlarning oldini olishga harakat qilamiz",
                 ],
@@ -1582,6 +1588,168 @@
                     "Bir kunda hujjatlarni yetkazish yoki olib kelish",
                     "Kechki va dam olish kunlari qabul (so‘rov bo‘yicha)",
                     "Shoshilinch sayohat, sud va hujjatlar bo‘yicha yordam",
+                ],
+            },
+            tj: {
+                gov_banner: "Сомонаи расмии Tag Pro Agency LLC",
+                nav_services: "Хизматрасониҳо",
+                nav_about: "Дар бораи мо",
+                nav_process: "Чӣ гуна кор мекунем",
+                nav_contact: "Алоқа",
+                nav_cta_phone: "Занг задан",
+
+                hero_badge:
+                    "Хизматрасонии авто, ҳуқуқӣ, immigratsiya ва бизнес",
+                hero_title: "Шарики боэътимод барои ҳамаи корҳо",
+                hero_subtitle:
+                    "Кумак барои мошин, суд, ҳуҷҷат, immigratsiya ва бизнес. Бо шумо бо забони худатон гап мезанем.",
+                hero_cta_primary: "Ба 267-217-6500 занг занед",
+                hero_cta_secondary: "Дар Telegram нависед",
+                hero_stat_1_title: "4 забон",
+                hero_stat_1_desc: "Англисӣ, русӣ, ўзбекӣ, тоҷикӣ",
+                hero_stat_2_title: "Хизматҳои пурра",
+                hero_stat_2_desc: "Авто, форма, суд ва дигар",
+                hero_stat_3_title: "Ёрии шахсӣ",
+                hero_stat_3_desc: "Дар офис ва бо баромад",
+                hero_stat_4_title: "Дар Пенсилвания",
+                hero_stat_4_desc: "Penndel, Bucks County",
+                hero_card_label: "Агентии касбӣ",
+                hero_card_title: "Tag Pro Agency LLC",
+                hero_card_address: "40 Bellevue Ave, Penndel, PA 19047",
+                hero_qr_title: "Алоқаи зуд",
+                hero_qr_desc:
+                    "QR-кодро бо телефон скан кунед, то контактро нигоҳ доред ва паём фиристед.",
+
+                about_title: "Як офис. Бисёр хизмат. Кӯмаки воқеӣ.",
+                about_subtitle:
+                    "Tag Pro Agency LLC ба муҳоҷирон, оилаҳо ва соҳибкорон ёрӣ медиҳад, то ҳуҷҷатҳои муҳим – title, регистрация, суд, immigratsiya, суғурта ва дигарро дуруст ҳал кунанд.",
+                about_points: [
+                    "Қабул дар офис, телефон ва хизмат бо баромад",
+                    "Бо забони англисӣ, русӣ, ўзбекӣ ва тоҷикӣ гап мезанем",
+                    "Ҳамаашро бо забони сода фаҳмонда медиҳем",
+                    "Кӯшиш мекунем хатогӣ, ҷарима ва таъхир нашавад",
+                ],
+                about_block_title: "Дар кадом корҳо ёрӣ медиҳем",
+                about_block_text:
+                    "Мушкилоти мошин ва регистрация, нотариус ва ҳуҷҷатҳои ҳуқуқӣ, immigratsiya ва формаҳои давлатӣ, кушодани бизнес, суд ва ҳуҷҷатҳои ҳаррӯза.",
+                about_chip_1_title: "Авто ва ронандагӣ",
+                about_chip_1_desc:
+                    "Title, ракам, регистрация, ҷаримаҳо.",
+                about_chip_2_title: "Ҳуқуқӣ ва нотариус",
+                about_chip_2_desc:
+                    "Ваколатнома, affidavit, apostille.",
+                about_chip_3_title: "Immigratsiya ва формаҳо",
+                about_chip_3_desc:
+                    "Green Card, EAD, гражданӣ, SSN, SNAP.",
+                about_chip_4_title: "Бизнес ва молия",
+                about_chip_4_desc:
+                    "Кушодани бизнес, payroll, номаҳои IRS.",
+
+                services_title: "Хизматрасониҳои мо",
+                services_subtitle:
+                    "Ҳалҳои қулай барои зиндагӣ ва кори шумо.",
+
+                process_title: "Чӣ гуна бо мо кор мекунед",
+                process_subtitle:
+                    "Қадамҳо рост ва равшан, бе гапи зиёдатӣ.",
+                process_steps: [
+                    "<div class='bg-white border border-gray-200 rounded-2xl p-5'><div class='text-xs font-semibold text-gray-500 mb-1'>Қадам 1</div><div class='font-semibold text-gray-900 mb-1'>Бо мо тамос гиред</div><p class='text-gray-600 text-sm'>Занг занед, дар Telegram нависед ё ба офис биёед. Якбор ҳолатро гап занед – мо рост мегӯем, чӣ роҳи воқеӣ ҳаст.</p></div>",
+                    "<div class='bg-white border border-gray-200 rounded-2xl p-5'><div class='text-xs font-semibold text-gray-500 mb-1'>Қадам 2</div><div class='font-semibold text-gray-900 mb-1'>Ҳуҷҷатҳоро биёред</div><p class='text-gray-600 text-sm'>Ҳуҷҷатҳоро месанҷем, мегӯем чӣ намерасад ва формаҳо, тарҷумаҳо ва аризаро тайёр мекунем.</p></div>",
+                    "<div class='bg-white border border-gray-200 rounded-2xl p-5'><div class='text-xs font-semibold text-gray-900 mb-1'>Қадам 3</div><p class='text-gray-600 text-sm'>Ҳуҷҷатҳоро мефиристем ё месупорем, ҷавобҳо ва срокҳоро пайгирӣ карданда кӯмак мекунем.</p></div>",
+                ],
+
+                contact_title: "Бо мо тамос гиред",
+                contact_subtitle:
+                    "QR-кодро бо телефон скан кунед, то зуд бо мо тамос гиред.",
+                contact_address_label: "Адреси офис",
+                contact_phone_label: "Телефон",
+                contact_email_label: "Email",
+                contact_qr_note:
+                    "Бо скан кардани QR-код метавонед контактро нигоҳ доред, адресро кушоед ё паём нависед.",
+
+                footer_contact_title: "Маълумоти тамос",
+                footer_copyright:
+                    "Бо диққат ва масъулият тарҳрезӣ шудааст",
+                privacy_policy:
+                    "Сиёсати махфият: Маълумоти мобилӣ барои маркетинг ё реклама ба шахсони сеюм дода намешавад. Дигар маълумотҳо розигии паёмҳои матниро дар бар намегиранд; ин маълумот ба ягон тарафи сеюм намеравад.",
+
+                s1_title: "Хизматрасониҳои авто ва регистрация",
+                s1_list: [
+                    "Гузаронидани title ҳангоми харидуфурӯши мошин",
+                    "Рақам ва стикерҳои нави Пенсилвания",
+                    "IRP-регистрация барои мошинҳои боркаш",
+                    "Дубликати title ва корти регистрация",
+                    "Рақамҳои муваққатӣ ва тамдиди регистрация",
+                    "Коркарди мошинҳои дилерӣ ва тиҷоратӣ",
+                    "Пайваст кардани EZ Pass ва пардохти роҳпулӣ",
+                    "Ёрӣ дар ҷаримаҳо ва қоидавайронкунӣ",
+                    "Бартараф кардани боздошти регистрация",
+                    "Пардохти ҷаримаҳо ва кумак бо суд",
+                ],
+                s2_title: "Нотариус ва ҳуҷҷатҳои ҳуқуқӣ",
+                s2_list: [
+                    "Нотариалии ҳама гуна ҳуҷҷатҳои шахсӣ ва ҳуқуқӣ",
+                    "Тайёр ва тасдиқ кардани ваколатнома",
+                    "Apostille барои истифодаи хориҷӣ",
+                    "Affidavit барои суд ва идораҳо",
+                    "Ёрӣ дар аризаҳои никоҳ ва талоқ",
+                    "Васиятнома ва trust-ҳо",
+                    "Номаҳои спонсорӣ ва тасдиқи кор",
+                    "Нотариуси шартномаи иҷора",
+                    "Notarius бо баромад (хона/офис/беморхона)",
+                ],
+                s3_title: "Тарҷума ва ҳуҷҷатҳои тасдиқшуда",
+                s3_list: [
+                    "Тарҷумаи сертификатдор (англисӣ/русӣ/тоҷикӣ)",
+                    "Омодасозии ҳуҷҷатҳои ҳуқуқӣ ва immigratsionӣ ба чанд забон",
+                    "Certified mail, конверт ва фиристодан",
+                    "Тарҷумонӣ дар суд ва вохӯриҳо",
+                ],
+                s4_title: "Immigratsiya ва формаҳои давлатӣ",
+                s4_list: [
+                    "Нав кардани Green Card",
+                    "Нав кардани EAD (рухсатнома барои кор)",
+                    "Ариза ба граждании ИМА",
+                    "Ислоҳ ва дубликати шаҳодатномаи таваллуд",
+                    "Ёрӣ бо appointment барои паспорт (оддӣ, тез, шитобӣ)",
+                    "Виза ва справка барои бозгашт ба Ӯзбекистон",
+                    "ELRC – субсидия барои нигоҳубини кӯдак",
+                    "Суғуртаи тиббӣ (Marketplace, Medicaid, CHIP)",
+                    "SNAP (food stamps) ариза",
+                    "Сабт ба мактаб ва боғча",
+                    "Баҳогузории диплом ва транскрипт",
+                    "Ариза барои Social Security Number",
+                ],
+                s5_title: "Хизматҳои бизнес ва молиявӣ",
+                s5_list: [
+                    "Кушодани бизнес (LLC, Corporation, Sole Proprietor)",
+                    "Танзим ва бурдани payroll",
+                    "Ёрӣ бо workers’ compensation",
+                    "Суғуртаи бизнес",
+                    "Монтаж ва омӯзиши QuickBooks",
+                    "Ҷавоб ба номаҳо ва ҷаримаҳои андоз",
+                    "Нақшаи пардохт ва қисм-қисм пардохти IRS",
+                    "New York Life – маслиҳат оид ба суғуртаи ҳаёт",
+                ],
+                s6_title: "Кумак дар суд ва ҳуҷҷатҳои судӣ",
+                s6_list: [
+                    "Занг ба суди магистралӣ: пешниҳоди guilty/not guilty",
+                    "Ба суд рафтан, тарҷума ва дастгирӣ",
+                    "Ёрӣ бо билети ҳаракат, санаҳои суд ва шунидан",
+                    "Музокира барои кам кардани ҷарима ва тарҷумаи ҳуҷҷатҳо",
+                ],
+                s7_title: "Тадбирҳо ва даъватномаҳо",
+                s7_list: [
+                    "Даъватнома барои тӯй, зодрӯз, baby shower ва дигар чорабинӣ",
+                    "Сохтани пайванди онлайн барои RSVP",
+                    "Омодасозии зуд ва фиристодани рақамӣ",
+                ],
+                s8_title: "Хизматҳои мобилӣ ва баъди соатҳо",
+                s8_list: [
+                    "Notarius ва хизматҳои авто бо баромад",
+                    "Қабул ва расондани ҳуҷҷат дар як рӯз",
+                    "Мулоқотҳои бегоҳӣ ва рӯзҳои истироҳат бо қайд",
+                    "Ёрии таъҷилӣ барои сафар, суд ва ҳуҷҷатҳо",
                 ],
             },
         };
